# greprip

./: AGENTS.md  PLAN.md  README.md  pyproject.toml
src/fnd/: __init__.py  cli.py  translator.py
src/grg/: __init__.py  cli.py  translator.py
tests/: test_cli.py  test_edge_cases.py  test_find_to_fd.py  test_grep_to_rg.py
tests/acceptance/: test_fnd.sh  test_grg.sh
